--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,10 @@ typings/
 # dotenv environment variables file
 .env
 
+/build/graphql/compiled/
+/build/graphql/buildSchema.js.transpiled
+/build/graphql/schema.json
+FindGraphQLTags-*
+**/__generated__/*.graphql.js
+
+
