--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npm run relay && node src/server",
     "build-schema": "node ./build/graphql/webpack && node ./build/graphql/buildSchema.js.transpiled",
-    "relay": "relay-compiler --src ./src --schema ./build/graphql/compiled/schema.graphql"
+    "relay": "relay-compiler --src ./src --schema ./build/graphql/compiled/schema.graphql",
+    "relayx": "node build/relay/webpack && node ./build/relay/customRelayCompiler.js.transpiled"
   },
   "repository": {
     "type": "git",
@@ -52,8 +53,10 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-relay": "^1.4.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "fast-glob": "^1.0.1",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.20.0"
+    "webpack-hot-middleware": "^2.20.0",
+    "webpack-node-externals": "^1.6.0"
   }
 }
