--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
   "devDependencies": {
     "babel-loader": "^7.1.2",
     "babel-plugin-relay": "^1.4.1",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react-hmre": "^1.1.1",
     "fast-glob": "^1.0.1",
     "webpack": "^3.8.1",
